fix: z-index

--- a/src/styles/components/FloatingButton.module.scss
+++ b/src/styles/components/FloatingButton.module.scss
@@ -34,6 +34,7 @@
         bottom: 20px;
         display: flex;
         flex-direction: column;
+        z-index: 1000;
 
         @media screen and (min-width:1300px) {
             right: 50px;
